<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:tag="cards main container">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="#FFFFFF"
        card_view:cardCornerRadius="7dp"
        card_view:cardElevation="5dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:text="@string/str_id"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#f9b669" />

                <TextView
                    android:id="@+id/text_p_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:gravity="left|center"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:text="Date"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#aa4747" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:text="@string/str_name"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#f9b669" />

                <TextView
                    android:id="@+id/text_p_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:gravity="left|center"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:text="Date"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#aa4747" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:text="@string/str_nationality"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#f9b669" />

                <TextView
                    android:id="@+id/text_p_nationality"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:gravity="left|center"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:text="Date"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#aa4747" />
            </LinearLayout>


        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>


