<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="2">

    <LinearLayout
        android:id="@+id/layout_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="15dp"
        android:visibility="visible">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/team_logo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:text="@string/str_team_name"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#f9b669"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/text_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:gravity="left"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:text="Date"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#aa4747"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:text="@string/str_team_code"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#f9b669"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/text_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:gravity="left|center"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:text="Date"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#aa4747"
                    android:textSize="14sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:text="@string/str_team_shortname"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#f9b669"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/text_short_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:gravity="left|center"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:text="Date"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#aa4747"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:text="@string/str_team_value"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#f9b669"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/text_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:gravity="left|center"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:text="Date"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#aa4747"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="PlayersList"
            android:textColor="@android:color/holo_blue_dark"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/list_players"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:scrollbars="none" />

    </LinearLayout>

</LinearLayout>